CHANGES IN FLTK 1.3.0

	- Added argument-less constructor in Fuid Widget Class
	- Fixed menu item counting issue in Fluid (STR #2322)
	- Added Fl_Menu_::find_item by callback
	- Removed redundant Fl_Group casts
	- Added indexing to Fl_Preferences
	- Integrated default menu into Demo test app
	- Added automated Xcode IDE file generation to Fluid
	- Fixed lost top item in Fluid's tree browser (STR #2233)
	- Fixed crash in test/Editor when freeing buffer 
	  too soon (STR #2294) 
	- Fixed Fl_Preferences Cygwin wide character bug (STR #2164)
	- Fixed sorting in Fl_Browser - last item would not 
	  be sorted (STR #2300)
	- Fixed window levels in OS X Cocoa (STR #2316)
	- Added jpeg support to Fluid image() element
	- Added loading jpeg images from memory
	- Added binary data type to Fluid
	- File chosser preview would hang if a device was choosen
	- Replaced _WIN32 symbols that had come with UTF-8 and the
	  new Fl_Table widget with WIN32
	- Fixed a buffer overflow in fl_utf8from_mb() (STR #2279)
	- Fixed a Windows GDI leak when testing alpha blending capabilities
	- Fixed a name conflict with new (VS 2008 Express) winsock2.h
	  versions and another conflict that produced compile errors
	  with VS 2008 Express (STR #2301)
	- Widgets now remove stale entries from the default callback
	  queue when they are deleted (STR #2302)
	- Moved OS X code base to the more moder Cocoa toolkit thanks
	  to the awesome work of Manolo Gouy (STR #2221)
	- Added template to generate new projects with Xcode.
	- Managing all Widget flags in a single location now (STR #2161)
	- Fixed all color related call to Fl_Color type (STR #2208)
	- File chooser preview now recognizes utf8 encoded 
	  text files (STR #2218)
	- Empty functions in Fluid no longer create an
	  implementation (STR #2259)
	- Fixed Fluid dependency on X11 (STR #2261)
	- Updated the bundled libpng to v1.2.40 (released Sep. 10, 2009)
	- Fixed Fl_Choice contrast with light-on-dark settings (STR #2219)